--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 
 body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    min-height: 100vh;
+	display: grid;
+	place-content: center;
     background-color: #D5E1EF;
 }
 
@@ -18,6 +18,7 @@ body{
     width: 320px;
     background-color: #ffffff;
 }
+
 
 img {
     border-radius: 10px;
